Introduce passwort change functionality.