@@ -2,6 +2,6 @@ package de.berlinerschachverband.bmm.exceptions;
 
 public class UserAlreadyExistsException extends BmmException {
     public UserAlreadyExistsException(String username) {
-        super(String.format("User %s already exists!", username));
+        super("User %s already exists!".formatted(username));
     }
 }
